<resources>
    <string name="app_name">Positivity Share</string>
    <string name="take_tour">Take a tour</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="done">Done</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="date">Date</string>
    <string name="about_me">About Me</string>
    <string name="add_photo">Click the area below to add/change your photo...</string>
    <string name="title_activity_bottom">Browse Users</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="send_to_user_info">Choose a positivity to send to them</string>
    <string name="compliment">Random Compliment</string>
    <string name="inspiration">Inspiration</string>
    <string name="choose_compliment">If you would like a different compliment, press the &quot;Get Next&quot; button.  Otherwise, press send to send current compliment.</string>
    <string name="get_next">Get Next</string>
    <string name="send_compliment">Send Compliment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
