<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.Fragments.ChoosePositivityToSendFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pick_option_tv"
            style="@style/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/send_to_user_info"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/compliment_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_cardview" />

        <include
            android:id="@+id/include_cardview"
            layout="@layout/cardview_browse_users"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/compliment_button"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/compliment"
            app:layout_constraintBottom_toTopOf="@+id/inspiration_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/inspiration_button"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/inspiration"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>